--- a/imooc_gp/package.json
+++ b/imooc_gp/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.2",
+    "react-native-deprecated-custom-components": "^0.1.0",
+    "react-native-easy-toast": "^1.0.6",
     "react-native-tab-navigator": "^0.3.3"
   },
   "devDependencies": {
